apps/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.local"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-tls-cert
      allowedRoutes:
        namespaces:
          from: All
